fix editable-choice-suggest overlaps with boolean param in pipeline

--- a/src/main/resources/io/jenkins/plugins/editable_choice/taglib/suggestInput/suggestInput.css
+++ b/src/main/resources/io/jenkins/plugins/editable_choice/taglib/suggestInput/suggestInput.css
@@ -13,6 +13,7 @@
 
 .editable-choice-suggest .editable-choice-suggest-choices-block {
   position: relative;
+  z-index: 1;
 }
 
 .editable-choice-suggest .editable-choice-suggest-choices {
